[package]
name = "hardening"
version = "0.1.0"
edition = "2024"

[dependencies]
ar = "0.9.0"
http-range-client = { version = "0.9.1", features=["reqwest-sync"], default-features = false }
inquire = "0.9.2"
md5 = "0.8.0"
owo-colors = "4.2.3"
procfs = "0.18.0"
reqwest = { version = "0.13.1", features=["blocking", "rustls-no-provider"], default-features = false }
ruzstd = "0.8.2"
tar = "0.4.45"
libc = "0.2.180"
lzma-rust2 = "0.16.2"
flate2 = "1.1.9"
anyhow = "1.0.102"
